style: fix container height, customize scrollbar

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -29,7 +29,7 @@ body {
 
 .container {
   padding: 1.5rem;
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
 
   display: grid;
@@ -126,4 +126,22 @@ body {
   letter-spacing: 1px;
   color: var(--dark-gray);
   padding-top: 0.5rem;
+}
+
+*::-webkit-scrollbar {
+  width: 4px;
+  background-color: var(--dark-cyan);
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: var(--very-dark-desaturated-blue);
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: var(--dark-gray);
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: var(--dark-grayish-blue);
 }
